--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.112.2",
+    "sqlalchemy>=2.0.32",
+    "sqlmodel>=0.0.22",
 ]
