--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.112.2",
+    "psycopg2>=2.9.9",
+    "pydantic-settings>=2.4.0",
     "sqlalchemy>=2.0.32",
     "sqlmodel>=0.0.22",
 ]
