--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi[standard]>=0.112.2",
     "psycopg2>=2.9.9",
     "pydantic-settings>=2.4.0",
+    "pytest>=8.3.2",
     "sqlalchemy>=2.0.32",
     "sqlmodel>=0.0.22",
 ]
