--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.13.2",
     "fastapi[standard]>=0.112.2",
     "psycopg2>=2.9.9",
     "pydantic-settings>=2.4.0",
